--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.0.9
 aniso8601==6.0.0
+appdirs==1.4.3
 appnope==0.1.0
 atomicwrites==1.3.0
 attrs==19.1.0
 backcall==0.1.0
 bandit==1.5.1
+black==19.3b0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
@@ -19,7 +21,9 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 gitdb2==2.0.5
 GitPython==2.1.11
+gunicorn==19.9.0
 idna==2.8
+ipdb==0.12
 ipython==7.4.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
@@ -54,6 +58,8 @@ six==1.12.0
 smmap2==2.0.5
 SQLAlchemy==1.3.3
 stevedore==1.30.1
+textblob==0.15.3
+toml==0.9.4
 traitlets==4.3.2
 twilio==6.26.1
 urllib3==1.24.2
