--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ entrypoints==0.3
 flake8==3.7.7
 Flask==1.0.2
 Flask-Admin==1.5.3
+Flask-Fixtures==0.3.8
 Flask-Migrate==2.4.0
 Flask-RESTful==0.3.7
 Flask-Script==2.0.6
