--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ pexpect==4.7.0
 pickleshare==0.7.5
 pluggy==0.9.0
 prompt-toolkit==2.0.9
+psycopg2==2.8.2
 ptyprocess==0.6.0
 py==1.8.0
 pycodestyle==2.5.0
